--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(code)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(code main.cpp main_algos/algebra.h main_algos/algebra.cpp)
+add_executable(code main.cpp main_algos/algebra.h)
