refactoring naming style. adding dsu and graph (not finished) data structures

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(core)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(core main.cpp core/other/algebra.h core/data_structure/segment_tree.h)
+add_executable(core main.cpp core/other/algebra.h core/data_structure/segment_tree.h core/data_structure/graph.h core/data_structure/dsu.h)
